--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,6 @@
         android:layout_height="46dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
         android:hint="Find company"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +65,8 @@
 
     <Button
         android:id="@+id/button_NEWS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="44dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#FF9800"
