--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,8 @@
         android:layout_marginTop="16dp"
         android:hint="Find company"
         android:inputType="textPersonName"
+        app:layout_constraintEnd_toStartOf="@+id/button_NEWS"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
