--- a/app/src/main/res/layout/activity_delate.xml
+++ b/app/src/main/res/layout/activity_delate.xml
@@ -7,6 +7,7 @@
     tools:context=".Delate">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/res_del"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintStart_toStartOf="parent"
