--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
+        android:backgroundTint="#FF9800"
         android:onClick="StartLogIn"
         android:text="registration"
         app:layout_constraintEnd_toEndOf="parent"
