--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="132dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="411dp"
-        android:layout_height="615dp"
+        android:layout_height="550dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
@@ -44,33 +44,31 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="196dp"
         android:layout_height="46dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:hint="Find company"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/button_NEWS"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="65dp"
+        android:layout_height="46dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="#00FFFFFF"
+        android:onClick="serch_com"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="serch_com"
         app:srcCompat="@android:drawable/ic_menu_search" />
 
     <Button
         android:id="@+id/button_NEWS"
-        android:layout_width="80dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="111dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="148dp"
         android:backgroundTint="#FF9800"
         android:onClick="NEWS"
         android:text="NEWS"
@@ -79,13 +77,30 @@
 
     <Button
         android:id="@+id/adm_btn"
-        android:layout_width="44dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="4dp"
+        android:layout_width="80dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="77dp"
+        android:backgroundTint="#AF2B2B"
         android:onClick="adminPan"
         android:text="adm"
+        app:iconPadding="0dp"
         app:layout_constraintEnd_toStartOf="@+id/button_NEWS"
+        app:layout_constraintHorizontal_bias="0.527"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button_sign_out"
+        android:layout_width="73dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="#FF9800"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:onClick="signout"
+        android:text="sign out"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
